secondo commit update acos asin

--- a/html/classmy__test_1_1_base_controller_fixed.html
+++ b/html/classmy__test_1_1_base_controller_fixed.html
@@ -124,7 +124,7 @@ $(document).ready(function(){initNavTree('classmy__test_1_1_base_controller_fixe
         fill in the X_log variables for plotting purposes, it needs to be called at every loop
     _receive_jstate(msg)
         callback associated to the joint state subscriber, fills in q, qd, tau arrays</pre> </div><hr/>The documentation for this class was generated from the following file:<ul>
-<li>my_test/my_test.py</li>
+<li>/home/massiccio/bidone_testcpp/my_test/my_test.py</li>
 </ul>
 </div><!-- contents -->
 </div><!-- doc-content -->
