--- a/documentation/robot/html/class_helper.html
+++ b/documentation/robot/html/class_helper.html
@@ -193,6 +193,7 @@ Here is the caller graph for this function:</div>
 <area shape="rect" title="constrains angle to [0,360[" alt="" coords="368,31,539,57"/>
 <area shape="rect" href="class_kin.html#ab585d8cc2566972b027d8ad98461c464" title="evaluates the pose of a given joint configuration" alt="" coords="179,5,320,32"/>
 <area shape="rect" href="class_kin.html#ad9037b3d067ec8ca5aae8c53c65db86b" title="creates a joint path between 2 points in space" alt="" coords="212,56,287,83"/>
+<area shape="rect" href="main_8cpp.html#a1c74e98f2b582e43765f30a56f0205ee" title="starts the procedure once a blocklist message has been provided" alt="" coords="25,5,111,32"/>
 <area shape="rect" href="class_robot.html#a84ae13c01a86fa3b3c020de0ee59cbca" title="moves the robot to a given position &#160;calculates the path from the current position and &#160;&#160;the final on..." alt="" coords="5,56,131,83"/>
 </map>
 </div>
@@ -258,6 +259,7 @@ Here is the caller graph for this function:</div>
 <area shape="rect" title="constrains angle to [&#45;180,180]" alt="" coords="368,31,563,57"/>
 <area shape="rect" href="class_kin.html#ab585d8cc2566972b027d8ad98461c464" title="evaluates the pose of a given joint configuration" alt="" coords="179,5,320,32"/>
 <area shape="rect" href="class_kin.html#ad9037b3d067ec8ca5aae8c53c65db86b" title="creates a joint path between 2 points in space" alt="" coords="212,56,287,83"/>
+<area shape="rect" href="main_8cpp.html#a1c74e98f2b582e43765f30a56f0205ee" title="starts the procedure once a blocklist message has been provided" alt="" coords="25,5,111,32"/>
 <area shape="rect" href="class_robot.html#a84ae13c01a86fa3b3c020de0ee59cbca" title="moves the robot to a given position &#160;calculates the path from the current position and &#160;&#160;the final on..." alt="" coords="5,56,131,83"/>
 </map>
 </div>
@@ -452,8 +454,9 @@ Here is the caller graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="class_helper_aa9318ee5d55c5da8518055f447234b4b_icgraph.png" border="0" usemap="#class_helper_aa9318ee5d55c5da8518055f447234b4b_icgraph" alt=""/></div>
 <map name="class_helper_aa9318ee5d55c5da8518055f447234b4b_icgraph" id="class_helper_aa9318ee5d55c5da8518055f447234b4b_icgraph">
-<area shape="rect" title="wrapps differences in angles" alt="" coords="195,5,359,32"/>
-<area shape="rect" href="class_kin.html#ab585d8cc2566972b027d8ad98461c464" title="evaluates the pose of a given joint configuration" alt="" coords="5,5,147,32"/>
+<area shape="rect" title="wrapps differences in angles" alt="" coords="329,5,493,32"/>
+<area shape="rect" href="class_kin.html#ab585d8cc2566972b027d8ad98461c464" title="evaluates the pose of a given joint configuration" alt="" coords="140,5,281,32"/>
+<area shape="rect" href="main_8cpp.html#a1c74e98f2b582e43765f30a56f0205ee" title="starts the procedure once a blocklist message has been provided" alt="" coords="5,5,92,32"/>
 </map>
 </div>
 
