--- a/documentation/robot/html/class_kin.html
+++ b/documentation/robot/html/class_kin.html
@@ -391,6 +391,15 @@ Here is the call graph for this function:</div>
 <area shape="rect" href="class_helper.html#aa9318ee5d55c5da8518055f447234b4b" title="wrapps differences in angles" alt="" coords="210,107,374,133"/>
 </map>
 </div>
+<div class="dynheader">
+Here is the caller graph for this function:</div>
+<div class="dyncontent">
+<div class="center"><img src="class_kin_ab585d8cc2566972b027d8ad98461c464_icgraph.png" border="0" usemap="#class_kin_ab585d8cc2566972b027d8ad98461c464_icgraph" alt=""/></div>
+<map name="class_kin_ab585d8cc2566972b027d8ad98461c464_icgraph" id="class_kin_ab585d8cc2566972b027d8ad98461c464_icgraph">
+<area shape="rect" title="evaluates the pose of a given joint configuration" alt="" coords="140,5,281,32"/>
+<area shape="rect" href="main_8cpp.html#a1c74e98f2b582e43765f30a56f0205ee" title="starts the procedure once a blocklist message has been provided" alt="" coords="5,5,92,32"/>
+</map>
+</div>
 
 </div>
 </div>
