--- a/documentation/robot/html/class_robot.html
+++ b/documentation/robot/html/class_robot.html
@@ -156,6 +156,15 @@ calculates the path from the current position and <br  />
   </dd>
 </dl>
 <dl class="section return"><dt>Returns</dt><dd>Eigen vector of angles for each of the 6 joints </dd></dl>
+<div class="dynheader">
+Here is the caller graph for this function:</div>
+<div class="dyncontent">
+<div class="center"><img src="class_robot_aad276a136acf286c4edadace34dcb099_icgraph.png" border="0" usemap="#class_robot_aad276a136acf286c4edadace34dcb099_icgraph" alt=""/></div>
+<map name="class_robot_aad276a136acf286c4edadace34dcb099_icgraph" id="class_robot_aad276a136acf286c4edadace34dcb099_icgraph">
+<area shape="rect" title="converts joint state message to Eigen vector of 6 joints" alt="" coords="140,5,247,32"/>
+<area shape="rect" href="main_8cpp.html#a1c74e98f2b582e43765f30a56f0205ee" title="starts the procedure once a blocklist message has been provided" alt="" coords="5,5,92,32"/>
+</map>
+</div>
 
 </div>
 </div>
